--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
-    "morgan": "^1.10.0"
+    "firebase-admin": "^13.0.2",
+    "morgan": "^1.10.0",
+    "uuid": "^11.0.5"
   }
 }
